--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 
     <!-- React components -->
+    <script type="text/babel" src="movie.js"></script>
+    <script type="text/babel" src="header.js"></script>
     <script type="text/babel" src="app.js"></script>
 </body>
 </html>
