--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- React components -->
     <script type="text/babel" src="movie.js"></script>
     <script type="text/babel" src="header.js"></script>
+    <script type="text/babel" src="search-form.js"></script>
     <script type="text/babel" src="app.js"></script>
 </body>
 </html>
