--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 
     <!-- React components -->
-    <script type="text/babel" src="movie.js"></script>
+    <script type="text/babel" src="movies.js"></script>
     <script type="text/babel" src="header.js"></script>
     <script type="text/babel" src="search-form.js"></script>
     <script type="text/babel" src="app.js"></script>
