--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/babel" src="movies.js"></script>
     <script type="text/babel" src="header.js"></script>
     <script type="text/babel" src="search-form.js"></script>
+    <script type="text/babel" src="genre.js"></script> 
     <script type="text/babel" src="app.js"></script>
 </body>
 </html>
