--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,6 @@
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 
     <!-- React components -->
-    <script type="text/babel" src="app.js"></script>
+    <script type="text/babel" src="cart.js"></script>
 </body>
 </html>
