--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>React Movies: Cart</title>
     
+    <!-- Font Awesome icon font -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     
@@ -18,6 +20,8 @@
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 
     <!-- React components -->
+    <script type="text/babel" src="header.js"></script>
+    <script type="text/babel" src="home-button.js"></script>
     <script type="text/babel" src="in-cart.js"></script>
     <script type="text/babel" src="cart.js"></script>
 </body>
